--- a/package.json
+++ b/package.json
@@ -45,80 +45,80 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.2",
-    "@angular/common": "^8.1.2",
-    "@angular/compiler": "^8.1.2",
-    "@angular/core": "^8.1.2",
-    "@angular/forms": "^8.1.2",
-    "@angular/platform-browser": "^8.1.2",
-    "@angular/platform-browser-dynamic": "^8.1.2",
-    "@angular/router": "^8.1.2",
+    "@angular/animations": "^9.0.0-next.12",
+    "@angular/common": "^9.0.0-next.12",
+    "@angular/compiler": "^9.0.0-next.12",
+    "@angular/core": "^9.0.0-next.12",
+    "@angular/forms": "^9.0.0-next.12",
+    "@angular/platform-browser": "^9.0.0-next.12",
+    "@angular/platform-browser-dynamic": "^9.0.0-next.12",
+    "@angular/router": "^9.0.0-next.12",
     "@types/hammerjs": "^2.0.36",
-    "@types/source-map": "0.5.2",
+    "@types/source-map": "0.5.7",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.6.2",
+    "core-js": "^3.3.2",
     "hammerjs": "^2.0.8",
-    "jszip": "^3.1.5",
+    "jszip": "^3.2.2",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "^6.5.2",
+    "rxjs": "^7.0.0-alpha.0",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
-    "@angular-devkit/build-ng-packagr": "~0.801.2",
-    "@angular-devkit/schematics": "^7.2.1",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler-cli": "^8.1.2",
-    "@angular/language-service": "^8.1.2",
+    "@angular-devkit/build-angular": "~0.900.0-next.12",
+    "@angular-devkit/build-ng-packagr": "~0.900.0-next.12",
+    "@angular-devkit/schematics": "^9.0.0-next.12",
+    "@angular/cli": "~9.0.0-next.12",
+    "@angular/compiler-cli": "^9.0.0-next.12",
+    "@angular/language-service": "^9.0.0-next.12",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~10.12.18",
-    "@types/webpack-env": "^1.13.6",
+    "@types/node": "~12.11.1",
+    "@types/webpack-env": "^1.14.1",
     "browser-sync": "^2.26.3",
-    "codelyzer": "^5.1.0",
-    "coveralls": "^3.0.2",
+    "codelyzer": "^5.1.2",
+    "coveralls": "^3.0.7",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-shell": "^0.6.5",
+    "gulp-shell": "^0.7.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
     "hammer-simulator": "0.0.1",
-    "igniteui-sassdoc-theme": "^1.0.0",
-    "igniteui-typedoc-theme": "^1.0.3",
-    "jasmine": "~3.4.0",
-    "jasmine-core": "~3.4.0",
+    "igniteui-sassdoc-theme": "^1.1.0",
+    "igniteui-typedoc-theme": "^1.1.0",
+    "jasmine": "~3.5.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.2",
-    "karma-jasmine-spec-tags": "~1.1.0",
-    "karma-junit-reporter": "~1.2.0",
+    "karma-jasmine-spec-tags": "~1.2.0",
+    "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.32",
-    "lunr": "^2.3.5",
-    "ng-packagr": "^5.2.0",
+    "lunr": "^2.3.7",
+    "ng-packagr": "^5.7.0",
     "pngcrush": "^2.0.1",
     "protractor": "~5.4.2",
-    "sassdoc": "^2.5.1",
+    "sassdoc": "^2.7.1",
     "sassdoc-plugin-localization": "^1.4.1",
-    "stylelint": "^9.8.0",
-    "stylelint-scss": "^3.5.0",
+    "stylelint": "^11.1.1",
+    "stylelint-scss": "^3.11.1",
     "themeleon": "^3.0.2",
-    "ts-node": "~7.0.1",
-    "tsickle": "0.34.0",
+    "ts-node": "~8.4.1",
+    "tsickle": "0.37.0",
     "tslib": "^1.9.3",
     "tslint": "~5.12.1",
-    "typedoc": "^0.14.1",
+    "typedoc": "^0.15.0-0",
     "typedoc-plugin-localization": "^1.4.1",
-    "typescript": "~3.4.5",
-    "webpack-sources": "1.3.0"
+    "typescript": "~3.6.4",
+    "webpack-sources": "2.0.0-beta.0"
   }
 }
