--- a/projects/igniteui-angular/tsconfig.lib.json
+++ b/projects/igniteui-angular/tsconfig.lib.json
@@ -21,6 +21,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "enableIvy": false,
     "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
